[package]
name = "proto"
version = "0.1.0"
authors = ["terassyi <iscale821@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "~1"

[dependencies]
pnet = "0.26.0"
pnet_datalink = "0.26.0"
nix = "0.17"
libc = "0.2"
byteorder = "1.3"
thiserror = "1.0"


#[[example]]
#name = "bpf"